--- a/SteinesM/hausaufgabe07.Rmd
+++ b/SteinesM/hausaufgabe07.Rmd
@@ -171,17 +171,45 @@ Der kritische Wert für einen einseitigen $z$-Test ist `qnorm(0.94)`.
 Die kritischen Werte für einen zweiseitigen $z$-Test sind $\pm$`qnorm(0.97)`.
 
 ### Gibt es einen Unterschied?
-Bei diesem Dozenten ist die Verwaltung wirklich unsicher, ob und was für einen Unterschied es geben könnte. (Welche Testart sollte man hier nutzen?)
+Bei diesem Dozenten ist die Verwaltung wirklich unsicher, ob und was für einen Unterschied es geben könnte. (Welche Testart sollte man hier nutzen?) ungerichteter z-Test
 
 In einem kleinen Seminar mit 7 Studenten beträgt der Durchschnittswert 10. Unterscheidet sich der Notenspiegel von dem idealen? Berechnen Sie den $z$-Test:
 
-code_hier
+```{r}
+n=7
+m=10
+z=sqrt(n)*((m-mu)/3)
+x=qnorm(0.97)
+
+if (z >= qnorm(0.97))
+  {
+  output <- paste("Da |z|>=", x,"wird die H0 abgelehnt.")
+  }else{
+  output <- paste("Da |z|<", x,"wird die H0 angenommen.")
+  }
+print(output)
+```
+Der Unterschied ist nicht signifikant.
 
 Das ist ein **_eins_von_signifikanter_insignifikanter_** Unterschied. 
 
 In einer Vorlesung vom selben Dozenten mit 50 Teilnehmern beträgt der Durchschnittswert wieder 10. (Es scheint, dass der Dozent 10 besonders toll findet.) Berechnen Sie den $z$-Test:
 
-code_hier
+```{r}
+n=50
+m=10
+z=sqrt(n)*((m-mu)/3)
+x=qnorm(0.97)
+
+if (z >= qnorm(0.97))
+  {
+  output <- paste("Da |z|>=", x,"wird die H0 abgelehnt.")
+  }else{
+  output <- paste("Da |z|<", x,"wird die H0 angenommen.")
+  }
+print(output)
+```
+Der Unterschied ist signifikant.
 
 Das ist ein **_eins_von_signifikanter_insignifikanter_** Unterschied. 
 
