--- a/hausaufgabe13.Rmd
+++ b/hausaufgabe13.Rmd
@@ -103,14 +103,12 @@ Sind alle Plots gleich gut?
 ### By Item
 Bei "Item" berechnen wir die Mittelwerte aller Trials innerhalb eines Items, d.h. wir nehmen den itemweise Mittelwert über Versuchpersonen hinweg. Dafür können wir `aggregate()` nutzen.
 
-CODE_BLOCK_HIER
 ```{r}
 priming.by.item <- aggregate(RT ~ cond * item,data=priming,FUN = mean)
 ```
 
 Wir wollen auch hier die Daten tabellerisch darstellen. Erstellen Sie eine Tabelle in Wide-Format für die Mittelwerte by Item.
 
-CODE_BLOCK_HIER
 ```{r, results='asis'}
 priming.by.item.wide2 <- dcast(priming.by.item,cond ~ item, value.var="RT")
 print(xtable(priming.by.item.wide2),type="html",include.rownames=FALSE)
@@ -171,8 +169,25 @@ ggplot(data=priming) + geom_density(aes(x=RT,color=cond,fill=cond),alpha=0.1) + 
 ```
 Führen Sie die entsprechende Item-Analyse aus.
 
-CODE_BLOCK_HIER
+```{r}
+priming.f2 <- ezANOVA(priming
+            , dv=.(RT)
+                      , wid=.(item)
+                      , within=.(prime,target)
+                      , detailed=TRUE
+                      )
+```
+### ANOVA
+```{r, results='asis'}
+print(xtable(priming.f2$ANOVA),type="html",include.rownames=FALSE)
+```
 
+```{r, results='asis'}
+print(xtable(priming.f2$ANOVA
+             , display=c("s","s","d","d","f","f","f","fg","s","g")
+             , digits=c(0,0,0,0,2,2,2,2,0,2))
+      ,type="html",include.rownames=FALSE)
+```
 # Interaktionen 
 In der Analyse by Subjects haben wir eine Interaktion zwsichen `prime` und `target`. Solche Interaktionen berichtet man in der Regel nur, wenn sie auch in der Auflösung zu finden ist. Hier heißt das, dass wir die Daten innerhalb der verschiedenen Stufen eines Faktors anschauen und weitere ANOVAs berechnen, um zu schauen, ob der verbleibende Faktor (oder die verbleibenden Faktoren bei mehrfaktoriellen ANOVA) noch signifikant wird. Wenn er in keiner Stufe des anderen Faktors signifikant wird, betrachten wir die Interaktion als nicht bedeutsam.
 
