--- a/Schwarzs/hausaufgabe13.Rmd
+++ b/Schwarzs/hausaufgabe13.Rmd
@@ -1,5 +1,5 @@
 % Hausaufgabe 13
-% Phillip Alday <phillip.alday@staff.uni-marburg.de>
+% Corinna Schwraz <phillip.alday@staff.uni-marburg.de>
 % 2014-05-27
 
 Falls die Umlaute in dieser und anderen Dateien nicht korrekt dargestellt werden, sollten Sie File > Reopen with Encoding > UTF-8 sofort machen (und auf jeden Fall ohne davor zu speichern), damit die Enkodierung korrekt erkannt wird! 
