--- a/Schwarzs/hausaufgabe13.Rmd
+++ b/Schwarzs/hausaufgabe13.Rmd
@@ -35,13 +35,13 @@ Um einiges leichter zu machen, sollten Sie auch die Datei `priming.tab` aus dem 
     - Items `item` ($n_2=20$)
 
 30 Subjects x 20 Items x 8 Bedingungen = `r 30*20*8` Trials.
+print(getwd())
 
-```{r}
 priming <- read.table("Data/priming.tab",header = T)
 priming$subj <- as.factor(priming$subj)
 priming <- subset(priming, item <= 20) # Filler ausschließen
 priming$item <- as.factor(priming$item)
-```
+
 
 ## Darstellung der Daten ohne Berücksichtigung der Wiederholungen
 ```{r}
