--- a/Schwarzs/hausaufgabe13.Rmd
+++ b/Schwarzs/hausaufgabe13.Rmd
@@ -35,6 +35,7 @@ Um einiges leichter zu machen, sollten Sie auch die Datei `priming.tab` aus dem 
     - Items `item` ($n_2=20$)
 
 30 Subjects x 20 Items x 8 Bedingungen = `r 30*20*8` Trials.
+
 ```{r}
 priming <- read.table("priming.tab",header = T)
 priming$subj <- as.factor(priming$subj)
@@ -109,6 +110,7 @@ priming.by.item <- aggregate(RT ~ cond*item, data=priming,FUN=mean)
 Wir wollen auch hier die Daten tabellerisch darstellen. Erstellen Sie eine Tabelle in Wide-Format für die Mittelwerte by Item.
 
 Mit Bedingungen als Zeilen und Versuchspersonen als Spalten;macht, finde ich, mehr Sinn, weil man die Daten für die einzelnen VP schneller ablesen kann.
+
 ```{r, results='asis'}
 priming.by.item.wide2 <- dcast(priming.by.item,cond ~ item, value.var="RT")
 print(xtable(priming.by.item.wide2),type="html",include.rownames=FALSE)
@@ -166,7 +168,26 @@ ggplot(data=priming) + geom_density(aes(x=RT,color=cond,fill=cond),alpha=0.1) + 
 ```
 Führen Sie die entsprechende Item-Analyse aus.
 
-CODE_BLOCK_HIER
+```{r}
+priming.f2 <- ezANOVA(priming
+                      , dv=.(RT)
+                      , wid=.(item)
+                      , within=.(prime,target)
+                      , detailed=TRUE
+                      )
+```
+
+```{r, results='asis'}
+print(xtable(priming.f2$ANOVA),type="html",include.rownames=FALSE)
+```
+
+
+```{r, results='asis'}
+print(xtable(priming.f2$ANOVA
+             , display=c("s","s","d","d","f","f","f","fg","s","g")
+             , digits=c(0,0,0,0,2,2,2,2,0,2))
+      ,type="html",include.rownames=FALSE)
+```
 
 # Interaktionen 
 In der Analyse by Subjects haben wir eine Interaktion zwsichen `prime` und `target`. Solche Interaktionen berichtet man in der Regel nur, wenn sie auch in der Auflösung zu finden ist. Hier heißt das, dass wir die Daten innerhalb der verschiedenen Stufen eines Faktors anschauen und weitere ANOVAs berechnen, um zu schauen, ob der verbleibende Faktor (oder die verbleibenden Faktoren bei mehrfaktoriellen ANOVA) noch signifikant wird. Wenn er in keiner Stufe des anderen Faktors signifikant wird, betrachten wir die Interaktion als nicht bedeutsam.
@@ -211,7 +232,19 @@ print(xtable(priming.f1.englisch.target$ANOVA
 # Deutsches Target
 Führen Sie die entsprechende Analyse für deutsches Target aus.
 
-CODE_BLOCK_HIER
+```{r, results='asis'}
+priming.f1.deutsch.target <- ezANOVA(subset(priming, target == "D")
+                                      , dv=.(RT)
+                                      , wid=.(subj)
+                                      , within=.(prime)
+                                      , detailed=TRUE
+                                      )
+print(xtable(priming.f1.deutsch.target$ANOVA
+             , display=c("s","s","d","d","f","f","f","fg","s","g")
+             , digits=c(0,0,0,0,2,2,2,2,0,2))
+      ,type="html",include.rownames=FALSE)
+
+```
 
 
 # Lizenz
